# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
include/: types.h
include/assets/: image.h
include/fbgfx/: clipping.h  color.h  surface.h
include/math/: rect.h
include/vm/: vm.h  vm_input.h  vm_input_codes.h  vm_log.h  vm_stdinc.h  vm_window.h
src/: main.cpp
src/assets/: image.c
src/fbgfx/: clipping.c  surface.c  surface_blit.c  surface_convert.c  surface_primitives.c
src/vm/: vm.h  vm_input.c  vm_input.h  vm_log.c  vm_log.h  vm_window.c  vm_window.h
test/: test_blit.c  test_color_format.c  test_primitives.c  test_surfaces.c  test_wm.c
